--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -8,15 +8,21 @@
 </header>
 
 <!-- Page Features -->
-<div class="row text-center">
+<div class="row text-center" *ngIf="cusinesData else empty">
 
-  <div class="col-lg-3 col-md-6 mb-4">
+
+
+  <div class="col-lg-3 col-md-6 mb-4" *ngFor="let c of cusinesData">
     <div class="card h-100">
-      <img class="card-img-top" src="http://placehold.it/500x325" alt="">
+      <img class="card-img-top img-responsive" src="{{c.collection.image_url}}" alt="">
       <div class="card-body">
-        <h4 class="card-title">Card title</h4>
-        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus
-          neque.</p>
+        <h4 class="card-title">
+
+          {{c.collection.title}}
+        </h4>
+        <p class="card-text">
+{{c.collection.description}}
+          </p>
       </div>
       <div class="card-footer">
         <a href="#" class="btn btn-primary">Find Out More!</a>
@@ -24,47 +30,9 @@
     </div>
   </div>
 
-  <div class="col-lg-3 col-md-6 mb-4">
-    <div class="card h-100">
-      <img class="card-img-top" src="http://placehold.it/500x325" alt="">
-      <div class="card-body">
-        <h4 class="card-title">Card title</h4>
-        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo magni sapiente,
-          tempore debitis beatae culpa natus architecto.</p>
-      </div>
-      <div class="card-footer">
-        <a href="#" class="btn btn-primary">Find Out More!</a>
-      </div>
-    </div>
-  </div>
-
-  <div class="col-lg-3 col-md-6 mb-4">
-    <div class="card h-100">
-      <img class="card-img-top" src="http://placehold.it/500x325" alt="">
-      <div class="card-body">
-        <h4 class="card-title">Card title</h4>
-        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus
-          neque.</p>
-      </div>
-      <div class="card-footer">
-        <a href="#" class="btn btn-primary">Find Out More!</a>
-      </div>
-    </div>
-  </div>
-
-  <div class="col-lg-3 col-md-6 mb-4">
-    <div class="card h-100">
-      <img class="card-img-top" src="http://placehold.it/500x325" alt="">
-      <div class="card-body">
-        <h4 class="card-title">Card title</h4>
-        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo magni sapiente,
-          tempore debitis beatae culpa natus architecto.</p>
-      </div>
-      <div class="card-footer">
-        <a href="#" class="btn btn-primary">Find Out More!</a>
-      </div>
-    </div>
-  </div>
 
 </div>
+
+<ng-template #empty> No Customers Yet </ng-template>
+
 <!-- /.row -->
