--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -13,13 +13,13 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Cuisines</a>
+          <a class="nav-link" routerLink="/cuisines">Cuisines</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">login</a>
+          <a class="nav-link" routerLink="/login">login</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">signup</a>
+          <a class="nav-link" routerLink="/signup">signup</a>
         </li>
       </ul>
     </div>
