--- a/src/app/components/callback/callback.component.html
+++ b/src/app/components/callback/callback.component.html
@@ -8,7 +8,7 @@
 </header>
 
 <!-- Page Features -->
-<div class="row text-center" *ngIf="cusinesData else empty">
+<div class="row text-center" >
 
 
   <div class="col  m-5">
@@ -16,5 +16,6 @@
       Loading...
 
     </div>
+   
   </div>
 </div>
